# cognitive_robot_abstract_machine

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
cora_plex/: README.md  config  pyproject.toml
cora_plex/.devcontainer/: README.md  devcontainer.json
cora_plex/demos/cora_plex_bullet_world_demo/: demo.py
cora_plex/demos/cora_plex_gcs_demo/: gcs_motion_planning.md
cora_plex/doc/: README.md
cora_plex/doc/source/: _config.yml  _toc.yml  abstract_robot.rst  conditions.rst  conf.py  costmap.rst  designators.rst  index.md  installation.rst  new_robot.rst  notebooks.rst  orm_concept.rst  plan.rst  process_modules.rst  quickstart.rst  remarks.rst  resolvers.rst  setup_env.rst  troubleshooting.rst
cora_plex/docker/: Dockerfile
cora_plex/docker/ros2/: Dockerfile  entrypoint.sh
cora_plex/examples/: README.md  action_designator.md  language.md  location_designator.md  motion_designator.md  object_designator.md  orm_example.md  plan.md
cora_plex/resources/robots/: ur5_robotiq.urdf
cora_plex/resources/worlds/: cora_plex_test.muv  cora_plex_test_empty.muv
cora_plex/scripts/: generate_database_for_ci.py  generate_orm.py  install.sh  setup_ros.sh
cora_plex/scripts/ipython_helper/: 01-import-cora_plex.ipy
cora_plex/src/cora_plex/: exceptions.py  language.py  motion_executor.py  pose_validator.py  probabilistic_costmap.py  tf_transformations.py  utils.py  view_manager.py
cora_plex/src/cora_plex/alternative_motion_mappings/: hsrb_motion_mapping.py  stretch_motion_mapping.py  tiago_motion_mapping.py
cora_plex/src/cora_plex/datastructures/: dataclasses.py  enums.py  grasp.py  rotations.py
cora_plex/src/cora_plex/external_interfaces/: blum_api.py  robokudo.py
cora_plex/src/cora_plex/locations/: locations.py
cora_plex/src/cora_plex/orm/: model.py  ormatic_interface.py
cora_plex/src/cora_plex/plans/: designator.py  factories.py  failures.py  plan.py  plan_callbacks.py  plan_entity.py  plan_node.py
cora_plex/src/cora_plex/robot_plans/: __init__.py
cora_plex/src/cora_plex/ros/: __init__.py
cora_plex/src/cora_plex/ros_utils/: force_torque_sensor.py  joint_state_publisher.py
cora_plex/src/cora_plex/validation/: error_checkers.py  goal_validator.py
cora_plex/src/pycram/: language.py  motion_executor.py  pose_validator.py  utils.py
cora_plex/src/pycram/alternative_motion_mappings/: tiago_motion_mapping.py
cora_plex/src/pycram/datastructures/: dataclasses.py  enums.py  execution_data.py  grasp.py  rotations.py
cora_plex/src/pycram/external_interfaces/: robokudo.py
cora_plex/src/pycram/locations/: locations.py
cora_plex/src/pycram/orm/: ormatic_interface.py
cora_plex/src/pycram/plans/: plan_callbacks.py  plan_node.py
cora_plex/src/pycram/ros_utils/: force_torque_sensor.py
cora_plex/src/pycram/validation/: error_checkers.py  goal_validator.py
doc/: _config.yml  (+3 more)
experiments/: pyproject.toml
experiments/scripts/: generate_orm.py
experiments/src/experiments/: experiment_definitions.py  ormatic_interface.py  robocasa_kitchen_demo.py
experiments/src/experiments/orm/: ormatic_interface.py
experiments/src/experiments/ormatic_experiments/: reliability.py
(+1744 files in other folders)
