[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[project]
name = "cora_plex"
version = "2.0.0"
authors = [
    { name = "Sorin Arion" },
    { name = "Abdelrhman Bassiouny" },
    { name = "Michael Beetz" },
    { name = "Jonas Dech", email = "jdech@uni-bremen.de" },
    { name = "Vanessa Hassouna", email = "hassouna@uni-bremen.de" },
    { name = "Malte Huerkamp" },
    { name = "Luca Krohm" },
    { name = "Patrick Mania" },
    { name = "David Prüser" },
    { name = "Jeroen Schäfer" },
    { name = "Tom Schierenbeck" },
    { name = "Simon Stelter" },
    { name = "Naren Vasantakumaar" },
]
description = "A Python library for cognitive robot control."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords=["robotics"]
dynamic = ["dependencies"]
license = { text = "GPL-3.0-only" }

[project.urls]
"Source" = 'https://github.com/cram2/cora_plex'
"Bug Tracker" = 'https://github.com/cram2/cora_plex/issues'

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["cora_plex*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
