[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "experiments"
version = "0.0.1"
description = "Experiment scripts and actions for CRAM."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
